Bug 1165667: Use reflow state's reference rendering context during flex layout, instead of creating a temporary one. r=mats